--- a/GymTracker/Views/Home/Trainees.cshtml
+++ b/GymTracker/Views/Home/Trainees.cshtml
@@ -31,16 +31,15 @@
                             </tr>
                 }*@
             <tbody>
-                @*onclick="location.href = '@(Url.Action("EditTrainee", "Trainees", new { traineeId = trainee.traineeId }))'"*@
                 @foreach (var trainee in Model.Trainees)
                 {
-                    <tr onclick="location.href='@(Url.Action("TraineeDetails", "Home", new { traineeId = trainee.Id }))">
+                    <tr onclick="location.href='@(Url.Action("TraineeDetails", "Home", new { traineeId = trainee.TraineeId }))">
                         @{
                             var base64 = Convert.ToBase64String(trainee.Picture);
                             var imgSrc = String.Format("data:image/gif;base64,{0}", base64);
                         }
                         <td>
-                            <img border=3 height=100 width=100 src="@imgSrc">
+                            @*<img border=3 height=100 width=100 src="@imgSrc">*@
                         </td>
                         <td>@trainee.Name</td>
                         <td>@trainee.Surname</td>
