--- a/GymTracker/Views/Home/NewTrainee.cshtml
+++ b/GymTracker/Views/Home/NewTrainee.cshtml
@@ -10,7 +10,7 @@
     </div>
     <div class="x_content">
         <br />
-        <form id="new-trainee" data-parsley-validate class="form-horizontal form-label-left">
+        <form id="new-trainee" asp-controller="Home" asp-action="AddNewTrainee" data-parsley-validate class="form-horizontal form-label-left">
             <div class="form-group">
                 <label class="control-label col-md-3 col-sm-3 col-xs-12" asp-for="Name">
                     Name <span class="required">*</span>
@@ -40,8 +40,7 @@
                     Date Of Birth <span class="required">*</span>
                 </label>
                 <div class="col-md-6 col-sm-6 col-xs-12">
-                    <div class='input-group date' id='
-                         '>
+                    <div class='input-group date' id='myDatepicker2'>
                         <input id="birthday" type='text' class="form-control" asp-for="DateOfBirth" data-inputmask="'mask': '99.99.9999'" placeholder="DD.MM.YYYY" required="required" />
                         <span class="input-group-addon">
                             <span class="glyphicon glyphicon-calendar"></span>
